# PythonPackages

HelloWorld/: README.md  (+2 more)
KnowledgeDiscovery/: pyproject.toml  pytest.ini
KnowledgeDiscovery/ingestion/: db.py  dedup.py  enrichers.py  models.py  pdf_utils.py  zotero_ingestor.py
KnowledgeDiscovery/recommender/core/: embedder.py  query.py  types.py
KnowledgeDiscovery/recommender/indexing/: bm25_index.py  text_index.py  vector_index.py
KnowledgeDiscovery/recommender/online/: openalex_search.py
KnowledgeDiscovery/recommender/strategies/: HybridRecommender.py  base.py
KnowledgeDiscovery/representation/core/: core_entities.py  factories.py  validators.py
KnowledgeDiscovery/representation/enrichment/: enrich_keywords.py
KnowledgeDiscovery/representation/metadata/: bibliographic.py  content.py
KnowledgeDiscovery/tests/: test_bibliographic.py  test_content.py  test_deduplication_keys.py  test_enrich_keywords.py  test_factories_arxiv_pdf.py  test_factories_grobid.py  test_full_pipeline.py  test_merge_rules.py  test_validators.py
KnowledgeDiscovery/tests/fixtures/: sample_tei.xml
udc_classifier/: pyproject.toml
udc_classifier/scripts/: classify_pdf.py  train_model.py
udc_classifier/udc_classifier/: __init__.py  dataset_builder.py  hierarchy.py  model.py  pdf_extractor.py
udc_classifier/udc_classifier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
zotero_classify/: README.md  pyproject.toml
zotero_classify/zotero_classify/: cli.py
zotero_classify/zotero_classify.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+104 files in other folders)
