[project]
name = "representation-layer"
version = "0.1.0"
description = "Unified metadata representation layer for research ingestion pipelines"
requires-python = ">=3.10"
dependencies = [
    # Add runtime dependencies here
]

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
